--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,13 +5,23 @@ layout: default
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
-  {% if page.tags %} |
+    <!--<span>[-->
+    <!--{% for tag in page.tags %}-->
+    <!--<a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}"><code class="highligher-rouge"><nobr>{{ tag }}</nobr></code>&nbsp;</a>-->
+    <!--{% endfor %}-->
+    <!--]</span>-->
+
+    {% if page.tags %}
+    <span class="post-tags">
   {% for tag in page.tags %}
   <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}" class="post-tag">{{ tag }}</a>
   {% endfor %}
+    </span>
+    <br>
   {% endif %}
 
-  {{ content }}
+
+    {{ content }}
 </div>
 
 <div class="related">
