--- a/_scss/component/_tag.scss
+++ b/_scss/component/_tag.scss
@@ -49,7 +49,7 @@
         padding: 0 1rem;
         &:hover {
           list-style-type: disc;
-          padding: 0 .5rem;
+          //padding: 0 .5rem;
         }
       }
     }
