--- a/_scss/lanyon.scss
+++ b/_scss/lanyon.scss
@@ -237,7 +237,7 @@ a.sidebar-nav-item:focus {
 #sidebar-checkbox:focus ~ .sidebar-toggle,
 #sidebar-checkbox:checked ~ .sidebar-toggle {
   color: #fff;
-  background-color: #555;
+  background-color: $theme-color-dark;
 }
 
 .sidebar-toggle:active:before,
@@ -537,6 +537,24 @@ a.pagination-item:hover {
   color: #8f5536;
 }
 
+/* With theme color */
+.theme-base-app .sidebar,
+.theme-base-app .sidebar-toggle:active,
+.theme-base-app #sidebar-checkbox:checked ~ .sidebar-toggle {
+  background-color: $theme-color;
+}
+
+.theme-base-app .sidebar,
+.theme-base-app .sidebar-toggle,
+.theme-base-app .related-posts li a:hover {
+  color: $theme-color;
+}
+
+.theme-base-app .sidebar {
+  a, p, span {
+    color: lighten($theme-color, 40%);
+  }
+}
 
 /*
  * Overlay sidebar
