--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
     {% if page.tags %}
     <span class="post-tags">
   {% for tag in page.tags %}
-  <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}" class="post-tag">{{ tag }}</a>
+  <a href="//{{ site.my_url }}{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}" class="post-tag">{{ tag }}</a>
   {% endfor %}
     </span>
     <br>
@@ -30,7 +30,7 @@ layout: default
     {% for post in site.related_posts limit:3 %}
       <li>
         <h3>
-          <a href="{{ site.baseurl }}{{ post.url }}">
+          <a href="//{{ site.my_url }}{{ site.baseurl }}{{ post.url }}">
             {{ post.title }}
             <small>{{ post.date | date_to_string }}</small>
           </a>
@@ -46,7 +46,7 @@ layout: default
   <div id="disqus_thread"></div>
   <script>
       var disqus_config = function () {
-          this.page.url = '{{ site.url }}{{ page.url }}'; // Replace PAGE_URL with your page's canonical URL variable
+          this.page.url = '{{ site.my_url }}{{ page.url }}'; // Replace PAGE_URL with your page's canonical URL variable
           this.page.identifier = '{{ page.id }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
       };
       (function() {
