excerpt with <!-- more -->, and configure gitlab with docker continued

--- a/_scss/general.scss
+++ b/_scss/general.scss
@@ -17,3 +17,12 @@
 .sidebar-nav-item-sub {
   padding-left: 45px;
 }
+
+pre {
+  white-space: pre;
+  overflow: auto;
+}
+
+.text-center {
+  text-align: center;
+}
