Projects and theme

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,11 +29,17 @@
     <![endif]-->
 
     <!-- Material Design fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <!-- Other fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Marko+One|Stoke" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Marck+Script|Marko+One|Roboto:300,400,500,700|Stoke"
+          rel="stylesheet">
+    <!-- font-family: 'Marck Script', cursive;
+        font-family: 'Fredericka the Great', cursive;
+        font-family: 'Marko One', serif;
+        font-family: 'Stoke', serif;
+        font-family: 'Roboto', sans-serif; -->
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
