--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
         <div class="container">
           <h3 class="masthead-title">
             <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}
-              and <a href="{{ site.baseurl }}/blog" title="Blog">Blog</a></small>
+            <span class="tagline">{{ site.tagline }}
+              and <a href="{{ site.baseurl }}/blog" title="Blog">Blog</a></span>
           </h3>
         </div>
       </div>
