--- a/_scss/component/_projects.scss
+++ b/_scss/component/_projects.scss
@@ -16,9 +16,10 @@
     }
     .badge-carre {
       font-size: 12px;
-      -webkit-border-radius: .1rem;
-      -moz-border-radius: .1rem;
-      border-radius: .1rem;
+      -webkit-border-radius: .05rem;
+      -moz-border-radius: .05rem;
+      border-radius: .05rem;
+      font-family: 'Marko One', serif;
     }
     .pro {
       background-color: #0a6ebd;
