--- a/_layouts/biography.html
+++ b/_layouts/biography.html
@@ -54,5 +54,84 @@ layout: default
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-8">
+                <div id="skill_java" class="col-sm-4"></div>
+            </div>
+            <div class="col-sm-4">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <div class="skill-name">English</div>
+                    </div>
+                    <div class=" col-sm-8 col-sm-offset-1 ">
+                        <div class="progress progress-striped">
+                            <div class="progress-bar progress-bar-{{ site.data.skills.colors[counter] }}"
+                                 style="width:30%">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+<div id="chartdiv" style="width: 100%; height: 200px; background-color: #282828;"></div>
+<!-- amCharts javascript code -->
+<script type="text/javascript">
+    AmCharts.makeChart("chartdiv",
+        {
+            "type": "pie",
+            "adjustPrecision": true,
+            "angle": 19.8,
+            "balloonText": "",
+            "depth3D": 24,
+            "gradientType": "linear",
+            "innerRadius": "48%",
+            "labelRadius": 5,
+            "pullOutRadius": "0%",
+            "startAngle": 0,
+            "startRadius": "300%",
+            "baseColor": "#FF8000",
+            "hideLabelsPercent": 34,
+            "hoverAlpha": 0.72,
+            "maxLabelWidth": 218,
+            "pullOutDuration": 0,
+            "pullOutEffect": "elastic",
+            "pullOutOnlyOne": true,
+            "sequencedAnimation": false,
+            "showZeroSlices": true,
+            "tabIndex": 0,
+            "titleField": "category",
+            "valueField": "percent",
+            "autoDisplay": true,
+            "backgroundAlpha": 1,
+            "fontSize": 20,
+            "handDrawn": false,
+            "handDrawScatter": 0,
+            "handDrawThickness": 0,
+            "theme": "chalk",
+            "allLabels": [],
+            "balloon": {
+                "animationDuration": 0,
+                "borderAlpha": 0.04,
+                "drop": true,
+                "fillAlpha": 0,
+                "fillColor": "#FFFFFFFF",
+                "maxWidth": 6,
+                "shadowAlpha": 0
+            },
+            "titles": [],
+            "dataProvider": [
+                {
+                    "category": "Java",
+                    "percent": "80"
+                },
+                {
+                    "category": "",
+                    "percent": "20"
+                }
+            ]
+        }
+    );
+</script>
