--- a/_layouts/biography.html
+++ b/_layouts/biography.html
@@ -55,8 +55,11 @@ layout: default
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-8">
-                <div id="skill_java" class="col-sm-4"></div>
+            <div class="col-sm-8" id="skills">
+                {% for prog in site.data.skills.programming %}
+                <div id="skill_{% increment skillcount %}" class="col-sm-4"
+                     data-percent="{{ prog.percent }}" data-code="{{ prog.code }}" data-name="{{ prog.name }}"></div>
+                {% endfor %}
             </div>
             <div class="col-sm-4">
                 <div class="row">
@@ -75,63 +78,66 @@ layout: default
         </div>
     </div>
 </div>
+<script>
+    let divSkills = $('#skills');
 
-<div id="chartdiv" style="width: 100%; height: 200px; background-color: #282828;"></div>
-<!-- amCharts javascript code -->
-<script type="text/javascript">
-    AmCharts.makeChart("chartdiv",
-        {
-            "type": "pie",
-            "adjustPrecision": true,
-            "angle": 19.8,
-            "balloonText": "",
-            "depth3D": 24,
-            "gradientType": "linear",
-            "innerRadius": "48%",
-            "labelRadius": 5,
-            "pullOutRadius": "0%",
-            "startAngle": 0,
-            "startRadius": "300%",
-            "baseColor": "#FF8000",
-            "hideLabelsPercent": 34,
-            "hoverAlpha": 0.72,
-            "maxLabelWidth": 218,
-            "pullOutDuration": 0,
-            "pullOutEffect": "elastic",
-            "pullOutOnlyOne": true,
-            "sequencedAnimation": false,
-            "showZeroSlices": true,
-            "tabIndex": 0,
-            "titleField": "category",
-            "valueField": "percent",
-            "autoDisplay": true,
-            "backgroundAlpha": 1,
-            "fontSize": 20,
-            "handDrawn": false,
-            "handDrawScatter": 0,
-            "handDrawThickness": 0,
-            "theme": "chalk",
-            "allLabels": [],
-            "balloon": {
-                "animationDuration": 0,
-                "borderAlpha": 0.04,
-                "drop": true,
-                "fillAlpha": 0,
-                "fillColor": "#FFFFFFFF",
-                "maxWidth": 6,
-                "shadowAlpha": 0
-            },
-            "titles": [],
-            "dataProvider": [
-                {
-                    "category": "Java",
-                    "percent": "80"
+    for (let i = 1; i <= divSkills.childElementCount; i++) {
+        let divSk = divSkills.find(':nth-child(' + i + ')');
+        Highcharts.chart(
+            {
+                chart: {
+                    renderTo: 'skill_' + i,
+                    type: 'pie',
+                    options3d: {
+                        enabled: true,
+                        alpha: 35
+                    },
+                    spacingBottom: 65,
+                    height: 200
                 },
-                {
-                    "category": "",
-                    "percent": "20"
-                }
-            ]
-        }
-    );
+                credits: {
+                    enabled: false
+                },
+                subtitle: {
+                    text: divSk.data('percent'),
+                    verticalAlign: 'middle',
+                    y: 12,
+                    style: {
+                        color: '#4572A7',
+                        fontSize: '25px'
+                    }
+                },
+                title: {
+                    text: divSk.data('code'),
+                    y: 25,
+                    style: {
+                        fontSize: '36px'
+                    },
+                    verticalAlign: 'bottom'
+                },
+                /*
+                 tooltip: {
+                 enabled: false,
+                 animation: false,
+                 backgroundColor: null
+                 },*/
+
+                plotOptions: {
+                    pie: {
+                        innerSize: '60%',
+                        depth: 20,
+                        dataLabels: false
+                    }
+                },
+                series: [{
+                    name: divSk.data('name'),
+                    data: [
+                        ['skill', divSk.data('percent')],
+                        ['o', 100 - divSk.data('percent')]
+                    ],
+                    enableMouseTracking: false
+                }]
+            }
+        )
+    }
 </script>
