--- a/_scss/component/_projects.scss
+++ b/_scss/component/_projects.scss
@@ -70,3 +70,11 @@
     column-count: 1;
   }
 }
+
+#languages {
+  .progress {
+    height: 15px;
+    margin-bottom: 0;
+    margin-top: 12px;
+  }
+}
