--- a/_includes/head.html
+++ b/_includes/head.html
@@ -94,4 +94,7 @@
     <script src="https://code.highcharts.com/highcharts-3d.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
+
+    <!-- Masonry for grid -->
+    <script src="https://masonry.desandro.com/masonry.pkgd.js"></script>
 </head>
