--- a/_scss/lanyon.scss
+++ b/_scss/lanyon.scss
@@ -86,6 +86,22 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.container-larger {
+  max-width: 38rem !important;
+}
+
+@media (min-width: 38em) {
+  .container-larger {
+    max-width: 40rem !important;
+  }
+}
+
+@media (min-width: 56em) {
+  .container-larger {
+    max-width: 65rem !important;
+  }
+}
+
 
 /*
  * Masthead
