Convert to JSON Presentation

--- a/_scss/component/_pentatonic.scss
+++ b/_scss/component/_pentatonic.scss
@@ -2,6 +2,12 @@
   display: flex;
   .panel-left {
     flex: 50%;
+    label {
+      font-weight: bold;
+    }
+    input {
+      margin: 10px;
+    }
   }
   #text-penta {
     font-family: monospace;
