--- a/_layouts/score.html
+++ b/_layouts/score.html
@@ -3,8 +3,12 @@ layout: page-larger
 ---
 {% capture myTune %}{{content | newline_to_br | strip_newlines | replace: "<br />", "\n"}}{% endcapture %}
 <div class="page">
+    <h2>Music</h2>
+    <a href="{{page.link}}">{{page.link}}</a>
     <!--    <h1 class="page-title">{{page.title}}</h1>-->
     <script src="../scripts/src/score/abcjs_basic_5.12.0-min.js" type="text/javascript"></script>
+    <script src="../scripts/src/score/abcjs_midi_5.12.0-min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="{{ site.baseurl }}/public/css/abcjs-midi.css">
     <script type="text/javascript">
         // import * as abcJs from "abcjs";
         let abc = "{{myTune}}";
@@ -14,11 +18,20 @@ layout: page-larger
         function load() {
             console.log("toto");
             ABCJS.renderAbc("paper", abc);
+            ABCJS.renderMidi("midi", abc);
+            ABCJS.renderMidi("midi-download", abc, {generateDownload: true, generateInline: false});
         }
 
         window.onload = function () {
             load();
         }
     </script>
+    <h2>Score</h2>
     <div id="paper"></div>
+    <div id="midi"></div>
+    <div id="midi-download"></div>
+
+    <h2>ABC Notation</h2>
+    <div class="small">{{content | newline_to_br }}</div>
+
 </div>
